# Open-code

./: .env  .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  PRODUCTION.md  QUICKSTART.md  README.md  clippy_output.json  example.claw  nextpromt.txt  notebook_llm.claw  opencode.json  package-lock.json  package.json  process_icon.py  test_e2e.sh  youtube_mailer.claw
.claude/: settings.local.json
.claw/: engine.sqlite  workflow-ingestor.ndjson
.github/: README.md
examples/: data_extract.claw  hello_claw.claw  image_finder.claw  opencode.json  purse_finder.claw  research_report.claw  use_from_python.py  web_summary.claw
npm-cli/: install.js  package.json
openclaw-gateway/: package-lock.json  package.json  server.mjs
prompts/: gemini-synthesis-implementation.md  gemini-testing-prompt.md  implement-spec-34.md  implement-spec-35.md  implement-spec-36.md  implement-spec-38.md  implement-spec-39.md  implement-specs-36-37.md
python-sdk/: pyproject.toml
python-testing/: email_youtube.py  pipeline.claw  pipeline2.claw  pipeline3.claw  pipeline_dsl.claw  test_pipeline.py  test_pipeline2.py  test_pipeline3.py  test_pipeline_dsl.py  test_youtube_mailer.py  verify_ai.py
scripts/: detect_renames.py  fetch_image.py  fetch_page.py  install.sh  rename_openclaw.cjs  rename_openclaw.js  results.txt  sandbox_echo.py  sandbox_echo.ts  search.js  search.mjs  search.py  test-request.js  ts-smoke-test.mjs
specs/: 01-DSL-Core-Specification.md  02-Compiler-Architecture.md  03-Grammar.md  04-AST-Structures.md  05-Type-System.md  06-CodeGen-SDK.md  07-OpenClaw-OS.md  (+47 more)
(+96 files in other folders)
